infra/ssss/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ssss-backend
  labels:
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/component: backend
  ports:
  - port: 8080
    name: ssss-backend
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssss-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend
    spec:
      securityContext:
        fsGroup: 999
      imagePullSecrets:
      - name: gh-registry
      containers:
      - name: backend
        securityContext: {}
        image: "ghcr.io/hvaprojects/ssss_backend:main-ffe5a91-20210419192149582" # {"$imagepolicy": "flux-system:ssss-backend"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - name: secrets
          mountPath: "/app/resources/secrets"
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: ssss-secrets-properties
          items:
          - key: secrets.properties
            path: secrets.properties
