infra/ssss/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ssss-frontend
spec:
  selector:
    app.kubernetes.io/component: frontend
  ports:
  - port: 3000
    name: ssss-frontend
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssss-frontend
  labels:
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
    spec:
      securityContext:
        fsGroup: 999
      imagePullSecrets:
      - name: gh-registry
      containers:
      - name: ssss
        securityContext: {}
        image: ghcr.io/hvaprojects/ssss_frontend:main-a4e5f3d-1620138129
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 200m
            memory: 200Mi
