infra/ssss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ssss
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ssss
  ports:
  - port: 8080
    name: ssss
    targetPort: http
