infra/ssss/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ssss
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: supply-apps-soffware-nl-tls
      hosts:
        - supply.apps.soffware.nl
  rules:
    - host: supply.apps.soffware.nl
      http:
        paths:
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: ssss-backend
                port:
                  number: 8080
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ssss-frontend
                port:
                  number: 3000
